Adding a new animation and hiding all components for devices that don't support nfc.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
     - packages/domain/assets/animations/success_checkmark.riv
     - packages/domain/assets/animations/scanner.riv
     - packages/domain/assets/animations/write_chip.riv
+    - packages/domain/assets/animations/attention.riv
 
 
     # certificates
